force-app/src/objects/ffct__BundleComponent__c.object
<CustomObject>
    <customHelpPage>ffct__bundlecomponentonlinehelp</customHelpPage>
    <description>Information about a bundle component.</description>
    <fields>
        <fullName>ffct__ApexCode__c</fullName>
        <label>ApexCode</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ffct__AsyncId__c</fullName>
        <label>Async D</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffct__Blacklist_By_Namespace__c</fullName>
        <label>Blacklist By Namespace</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ffct__Bundle__c</fullName>
        <label>Bundle</label>
        <referenceTo>ffct__Bundle__c</referenceTo>
        <relationshipLabel>Bundle Component</relationshipLabel>
        <relationshipName>BundleComponent</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ffct__EnableUpdate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this field is set then the records on the target org will get updated. It is only applicable if the component type is records. If this field is not set the records will get inserted.</description>
        <inlineHelpText>If this field is set then the records on the target org will get updated. It is only applicable if the component type is records. If this field is not set the records will get inserted.</inlineHelpText>
        <label>Enable Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffct__Error__c</fullName>
        <label>Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ffct__FieldsToWhitelist__c</fullName>
        <label>FieldsToBlacklist</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ffct__InProgress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Progress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffct__PackageName__c</fullName>
        <label>Package Namespace</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffct__PackageVersion__c</fullName>
        <label>Package Version</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffct__Password__c</fullName>
        <label>Password</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffct__Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffct__Skipped__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skipped</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffct__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Metadata</fullName>
                </value>
                <value>
                    <fullName>Records</fullName>
                </value>
                <value>
                    <fullName>Apex</fullName>
                </value>
                <value>
                    <fullName>InstalledPackage</fullName>
                </value>
                <value>
                    <fullName>MetadataPermissionSet</fullName>
                </value>
                <value>
                    <fullName>MetadataProfile</fullName>
                </value>
                <value>
                    <fullName>SecondaryMetadata</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffct__child__c</fullName>
        <label>ChildRelationshipsToBlacklist</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Bundle Component</label>
    <nameField>
        <label>Bundle Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BundleComponent</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ffct__Blank_Apex_Code</fullName>
        <active>true</active>
        <description>If BundleComponent Type is Apex then ApexCode TextArea should not be blank.</description>
        <errorConditionFormula>CONTAINS( TEXT( ffct__Type__c ) , &apos;Apex&apos;)  &amp;&amp;  ISBLANK( ffct__ApexCode__c )</errorConditionFormula>
        <errorMessage>Enter Apex Code to be executed or choose BundleComponent Type other than &apos;Apex&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ffct__Blank_Package_Name</fullName>
        <active>true</active>
        <description>If Bundle Component Type is selected as Installed Package then Package Name should not be empty</description>
        <errorConditionFormula>CONTAINS( TEXT( ffct__Type__c ) , &apos;InstalledPackage&apos;)  &amp;&amp;  ISBLANK( ffct__PackageName__c )</errorConditionFormula>
        <errorMessage>Enter Package Name  to be installed or choose BundleComponent Type other than &apos;InstalledPackage&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ffct__Blank_Package_Version</fullName>
        <active>true</active>
        <description>If Bundle Component Type is selected as Installed Package then Package  Version should not be empty</description>
        <errorConditionFormula>CONTAINS( TEXT( ffct__Type__c ) , &apos;InstalledPackage&apos;)  &amp;&amp;  ISBLANK(  ffct__PackageVersion__c )</errorConditionFormula>
        <errorMessage>Enter Package Version to be installed or choose BundleComponent Type other than &apos;InstalledPackage&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ffct__BundleComponent_Type_Mandatory</fullName>
        <active>true</active>
        <description>Type field of BundleComponent Object is mandatory</description>
        <errorConditionFormula>ISBLANK( TEXT( ffct__Type__c ) )</errorConditionFormula>
        <errorMessage>BundleComponent Type is mandatory field. It cannot be left blank.</errorMessage>
    </validationRules>
</CustomObject>